# optimum-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.render  Makefile  README.md  curl.yml  deploy.md  docker-compose.yml  docker-start.sh  manage.py  pyproject.toml  startup.sh
.github/workflows/: deploy.yml  ping.yml
apps/face_auth/: apps.py  serializers.py  services.py  urls.py  views.py
apps/face_auth/tests/: __init__.py  test_services.py  test_views.py
apps/proof_of_life/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/proof_of_life/migrations/: 0001_initial.py  0002_alter_proofoflifesettings_minimum_confidence_score_and_more.py  __init__.py
apps/proof_of_life/tests/: test_models.py  test_views.py
apps/users/: admin.py  admin_auth_views.py  managers.py  middleware.py  models.py  otp_views.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/users/management/commands/: create_superuser.py
apps/users/migrations/: 0001_initial.py  0002_user_verification_expires_at.py  0003_user_auth_faces_count.py  0004_user_profile_picture.py  0005_otp.py  0006_user_address_user_city_user_country_user_postal_code.py
apps/users/tests/: test_otp.py  test_views.py
core/: celery.py  health_urls.py  urls.py  wsgi.py
core/services/: storage.py
core/settings/: __init__.py  base.py  dev.py  prod.py
templates/: index.html
